# AI-CIRCLE

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  docker-compose.yml  railway.toml
.github/workflows/: ci.yml
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/adapters/: base.py  claude_adapter.py  falai_adapter.py  gemini_adapter.py  human_adapter.py  openai_adapter.py  registry.py
backend/api/: agents.py  costs.py  memory.py  messages.py  sessions.py  workflows.py
backend/core/: config.py  dependencies.py  events.py  startup_checks.py
backend/models/: agent.py  cost.py  memory.py  message.py  session.py
backend/router/: capability_matcher.py  hybrid_router.py  mention_parser.py  volunteer_detector.py
backend/services/: cost_tracker.py  memory_service.py  redis_service.py  session_manager.py  supabase_service.py
backend/tests/: conftest.py  test_cost_tracker.py  test_memory.py  test_router.py
backend/websocket/: handlers.py  hub.py  protocol.py
frontend/: Dockerfile  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: AgentAvatar.tsx  ChatRoom.tsx  MessageBubble.tsx  MessageInput.tsx  TypingIndicator.tsx
frontend/src/components/config/: AgentConfigPanel.tsx
frontend/src/components/dashboard/: AgentStatusPanel.tsx  CostDashboard.tsx  (+1 more)
frontend/src/hooks/: useAgents.ts  useChat.ts  useCosts.ts  useWebSocket.ts
frontend/src/lib/: api.ts  websocket.ts
frontend/src/types/: index.ts
scripts/: dev.sh  setup_local.sh  setup_supabase.sql
(+1 files in other folders)
