[project]
name = "agenthub-backend"
version = "0.1.0"
description = "Multi-Agent Group Chat Orchestrator - Backend"
requires-python = ">=3.11"
authors = [
    { name = "Fritz", email = "fritz@robomodal.com" }
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
